--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,15 +10,26 @@
   <% if content_for?(:head) %><%= yield(:head) %><% end %>
 </head>
 <body>
-  <%= render "shared/user_menu" %>
   <div class="container">
-    <% if notice %>
-      <p class="alert alert-success"><%= notice %></p>
-    <% end %>
-    <% if alert %>
-      <p class="alert alert-danger"><%= alert %></p>
-    <% end %>
-    <%= content_for?(:content) ? yield(:content) : yield %>
+    <div class="row">
+      <div class="col-md-6">
+        <h1> Calendar</h1>
+      </div>
+      <div class="col-md-6">
+        <%= render "shared/user_menu" %>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <% if notice %>
+          <p class="alert alert-success"><%= notice %></p>
+        <% end %>
+        <% if alert %>
+          <p class="alert alert-danger"><%= alert %></p>
+        <% end %>
+        <%= content_for?(:content) ? yield(:content) : yield %>
+      </div>
+    </div>
   </div>
 </body>
 </html>
