--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6">
-        <h1> Calendar</h1>
+        <h1><%= link_to '/' do %>Calendar<% end %></h1>
       </div>
       <div class="col-md-6">
         <%= render "shared/user_menu" %>
