--- a/app/views/calendar/show.html.erb
+++ b/app/views/calendar/show.html.erb
@@ -1,6 +1,9 @@
 <div class="row">
   <div class="col-md-12 text-center">
     <div class="well controls">
+      <%= link_to calendar_path(date: Time.zone.now.at_beginning_of_month), class: "btn btn-default" do %>
+        Today
+      <% end %>
       <%= link_to calendar_path(date: @date - 1.month), class: "btn btn-default" do %>
         <i class="glyphicon glyphicon-backward"></i>
       <% end %>
